# dolfinx-tutorial

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  Changelog.html  Changelog.md  Dockerfile  README.html  README.md  _config.yml  _toc.yml  environment.yml  fem.html  fem.md  genindex.html  index.html  index.ipynb  index.md  jupyter_book.code-workspace  objects.inv  pyproject.toml  references.bib  references_fem.bib  search.html  searchindex.js  tox.ini  tutorials.md
.circleci/: config.yml
_data/: navbar.yml  stylesheets.yml
_includes/: _head.html  _header.html  _nav.html  _paper.html
_layouts/: default.html
_sources/: Changelog.md  fem.md  index.ipynb  index.md
assets/: customsty.css
chapter1/: complex_mode.html  complex_mode.ipynb  complex_mode.py  dg.ipynb  fundamentals.html  fundamentals.md  fundamentals_code.html  fundamentals_code.ipynb  fundamentals_code.py  implementation1.ipynb  membrane.html  membrane.ipynb  membrane.md  membrane_code.html  membrane_code.ipynb  membrane_code.py  membrane_paraview.html  nitsche.html  nitsche.ipynb  nitsche.py  references_fundamentals copy.bib
chapter2/: advdiffreac.html  advdiffreac.ipynb  advdiffreac.md  amr.ipynb  amr.py  bdforces_lv2  bdforces_lv4  bib_ns.bib  diffusion_code.html  diffusion_code.ipynb  diffusion_code.py  elasticity_scaling.html  elasticity_scaling.md  head_code.ipynb  heat_code.html  heat_code.ipynb  heat_code.py  heat_equation.html  heat_equation.md  helmholtz.md  helmholtz_code.ipynb  helmholtz_code.py  hyperelasticity.html  hyperelasticity.ipynb  hyperelasticity.py  intro.html  intro.md  linearelasticity.html  linearelasticity.md  linearelasticity_code.html  linearelasticity_code.ipynb  linearelasticity_code.py  monolithic_navierstokes_crp0.md  monolithic_navierstokes_crp0.py  navierstokes.html  navierstokes.md  nonlinpoisson.html  nonlinpoisson.md  nonlinpoisson_code.html  nonlinpoisson_code.ipynb  (+11 more)
chapter3/: component_bc.html  component_bc.ipynb  component_bc.py  demo_smoothed_tv_inpainting.ipynb  demo_smoothed_tv_inpainting.py  em.html  em.ipynb  em.py  multiple_dirichlet.html  multiple_dirichlet.ipynb  multiple_dirichlet.py  neumann_and_dirichlet.html  neumann_dirichlet_code.html  neumann_dirichlet_code.ipynb  neumann_dirichlet_code.py  robin_neumann_dirichlet.html  robin_neumann_dirichlet.ipynb  robin_neumann_dirichlet.py  subdomains.html  subdomains.ipynb  subdomains.py  wire.ipe
chapter4/: compiler_parameters.html  compiler_parameters.ipynb  (+14 more)
(+57 files in other folders)
