[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DOLFINx_Tutorial"
version = "0.7.2"
dependencies = [
    "jupyter-book",
    "docutils",
    "meshio",
    "h5py",
    "seaborn",
    "pandas",
    "tqdm",
    "pyvista[all]>=0.43.0",
    "fenics-dolfinx>=0.7.0",
]

[project.optional-dependencies]
dev = ["pdbpp", "ipython", "jupytext"]

[tool.setuptools]
packages = []


[tool.jupytext]
formats = "ipynb,py:percent"
