[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DOLFINx_Tutorial"
version = "0.8.0"
dependencies = [
    "jupyter-book",
    "meshio",
    "h5py",
    "seaborn",
    "pandas",
    "tqdm",
    "pyvista[all]>=0.43.0",
    "fenics-dolfinx>=0.8.0",
]

[project.optional-dependencies]
dev = ["pdbpp", "ipython", "jupytext", "ruff"]

[tool.setuptools]
packages = []


[tool.jupytext]
formats = "ipynb,py:percent"


[tool.ruff.lint.isort]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["gmsh", "numpy", "pytest"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
