[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3", "poetry-core"]
build-backend = "setuptools.build_meta"

[project]
name = "DOLFINx_Tutorial"
version = "0.10.0"
dependencies = [
    "jupyter-book<2.0",
    "meshio",
    "h5py",
    "seaborn",
    "pandas",
    "tqdm",
    "pyvista[all]>=0.45.0",
    "fenics-dolfinx>=0.10.0,<0.11.0",
    "sphinx-codeautolink",
    "trame_jupyter_extension",
    "jupytext",
    "vtk>=9.5.0",
]

[project.optional-dependencies]
dev = ["pdbpp", "ipython", "ruff", "pre-commit"]
netgen = [
    "ngsPETSc>=0.1.1",
] # Has to be optional as we cant get netgen on linux/arm64

[tool.setuptools]
packages = []


[tool.jupytext]
formats = "ipynb,py:percent"


[tool.ruff.lint.isort]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["gmsh", "numpy", "pytest"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
